--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -4,7 +4,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Kristina ist seit August 2014 Geschäftsführerin bei der Open Knowledge Foundation Deutschland. Davor war sie bei UNHCR in Myanmar für den Bereich Donor Relations zuständig. Kristina hat als Senior Program Manager der Carnegie Endowment for International Peace das Brüsseler Büro stellvertretend geleitet und als Programm und Konferenz Manager den Bereich Internationale Politik der Körber Stiftung begleitet. Weitere berufliche Stationen waren der Danish Refugee Council in Myanmar und das Wall Street Journal Europe in Berlin."
+  bio: "Kristina ist seit August 2014 Geschäftsführerin bei der Open Knowledge Foundation Deutschland. Davor war sie bei UNHCR in Myanmar für den Bereich Donor Relations zuständig. Kristina hat als Senior Program Manager der Carnegie Endowment for International Peace das Brüsseler Büro stellvertretend geleitet und als Programm- und Konferenz-Manager den Bereich Internationale Politik der Körber Stiftung begleitet. Weitere berufliche Stationen waren der Danish Refugee Council in Myanmar und das Wall Street Journal Europe in Berlin."
   bio_en: "Kristina is Chief Operating Officer of OKF DE since August 2014. Previously, she worked as Peace Building Fund Coordinator with UNHCR in Myanmar. Kristina was the deputy lead of the Brussels office of Carnegie Endowment for International Peace, and part of the International Relations team of Körber Foundation. She has furthermore worked with the Danish Refugee Council in Myanmar and the Wall Street Journal Europe in Berlin."
   mail: kristina.klein@okfn.de
   twitter:
@@ -16,7 +16,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Helene engagiert sich insbesondere in den Bereichen OpenGLAM (Galeries, Libraries, Archives, Museums) und Open Culture. Mit ihrer Arbeit möchte sie den offenen Zugang und die freie Nutzbarkeit von Kulturerbe fördern, damit unsere Kulturschätze auch im digitalen Zeitalter relevant bleiben. Bei der Open Knowledge Foundation Deutschland ist sie als Projektleiterin verantwortlich für den Kultur-Hackathon Coding Da Vinci und arbeitet an dem EU-Forschungsprojekt Europeana Cloud, der Konferenz Zugang gestalten und dem Nachwuchsförderprogramm Jugend hackt mit. Studiert hat sie Kulturwissenschaften und Wirtschaft im In- und Ausland."
+  bio: "Helene engagiert sich insbesondere in den Bereichen OpenGLAM (Galeries, Libraries, Archives, Museums) und Open Culture. Mit ihrer Arbeit möchte sie den offenen Zugang und die freie Nutzbarkeit von Kulturerbe fördern, damit unsere Kulturschätze auch im digitalen Zeitalter relevant bleiben. Bei der Open Knowledge Foundation Deutschland ist sie als Projektleiterin verantwortlich für den Kultur-Hackathon Coding Da Vinci und die Datenschule. Studiert hat sie Kulturwissenschaften und Wirtschaft im In- und Ausland."
   bio_en: "Helene's main focus is OpenGLAM (Galleries, Libraries, Archives, and Museums) and Open Culture. Through her work, she campaigns for open access to and free usage of cultural heritage, in order to ensure the relevance of cultural artefacts in the digital world. At OKF DE, she is project lead for Coding da Vinci, a cultural hackathon. She also assists with Zugang Gestalten and Jugend hackt. She studied cultural sciences and economics in Germany and abroad."
   mail: helene.hahn@okfn.de
   twitter: pluscha
@@ -89,7 +89,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitet Fiona das Projekt 'Digital Refugee Labs' im Rahmen von Code for Germany."
+  bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitete Fiona das Projekt 'Digital Refugee Labs' im Rahmen von Code for Germany."
   bio_en: "Fiona has been with OKF DE since 2014 and is Code for Germany's Community Organizer. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies the sociology of technology at the Technical University in Berlin. She has strong ties to a number of different NGOs that are connected to OKF DE's work and has been active in the field of digital literacy for a number of years. In 2016, Fiona will be Project Lead in the Code for Germany project 'Digital Refugee Labs'."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
@@ -128,7 +128,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Walter ist Ökonom und seit Jahren netzpolitsch aktiv. Aktuell arbeitet er an den Projekten Open Data Incubator for Europe (ODINE), einem H2020-Forschungsprojekt und am Digitalen Offenheitsindex [do:index]. Überdies betreut er den Open Data Census. Nach Berlin kam er 2012 als Co-Founder eines Startups, zuvor arbeitete er 5 Jahre als Sysadmin in NYC."
+  bio: "Walter ist Ökonom und seit Jahren netzpolitsch aktiv. Aktuell arbeitet er an den Projekten Open Data Incubator for Europe (ODINE), einem H2020-Forschungsprojekt und am Digitalen Offenheitsindex [do:index]. Außerdem betreut er den Open Data Census. Nach Berlin kam er 2012 als Co-Founder eines Startups. Zuvor arbeitete er fünf Jahre als Sysadmin in New York City."
   bio_en: "Walter is an economist by training and has been involved in the domain of Netzpolitik for many years. He is project lead of the EU research project Open Data Incubator (ODINE), the Digitaler Offenheitsindex [do:index], and supervises the Open Data Census.  He worked as a system administrator in NYC, before moving to Berlin, where he co-founded a start-up in 2012."
   mail: walter.palmetshofer@okfn.de
   twitter: vavoida
@@ -180,7 +180,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Dr. Markus Neuschäfer arbeitet seit Januar 2015 als Projektleiter bei der OKF. Aktuell arbeitet er an dem OER-Projekt edulabs und betreut die Zusammenarbeit mit DARIAH-DE in den Bereichen Digital Humanities und Open Science. Markus engagiert sich für offene Daten in Bildung, Wissenschaft und Kultur; besonders interessiert ihn die Entwicklung von Sichtbarkeit mit freien Inhalten. Vor der Open Knowledge Foundation Deutschland promovierte er in Germanistik, war an der Uni Göttingen tätig und arbeitete als Business Development Manager im Verlagswesen."
+  bio: "Dr. Markus Neuschäfer arbeitet seit Januar 2015 als Projektleiter bei der OKF DE. Aktuell arbeitet er an dem OER-Projekt edulabs und betreut die Zusammenarbeit mit DARIAH-DE in den Bereichen Digital Humanities und Open Science. Markus engagiert sich für offene Daten in Bildung, Wissenschaft und Kultur; besonders interessiert ihn die Entwicklung von Sichtbarkeit mit freien Inhalten. Vor der Open Knowledge Foundation Deutschland promovierte er in Germanistik, war an der Uni Göttingen tätig und arbeitete als Business Development Manager im Verlagswesen."
   bio_en: "Markus is project lead of edulabs and DARIAH-DE, he focuses on education,  Digital Humanities and Open Science. He engages with Open Data in Science and Culture and is especially curious about the visibility of open content and open educational resources. He holds a PhD German Philology, worked at the University of Göttingen and developed Open Science business models in publishing. He also supports the volunteer platform refugeephrasebook.de with webdesign and coordination."
   mail: m.neuschaefer@okfn.de
   twitter: mneuschaefer
@@ -193,7 +193,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Maximilian Voigt unterstützt das Projekt [edulabs](https://okfn.de/projekte/edulabs/). Zudem engagiert er sich in offenen Werkstätten, beschäftigt sich mit physical computing und setzt sich für freie Bildung ein. Vor der Open Knowledge Foundation Deutschland mitbegründete Maximilian den FabLab Cottbus e.V., studierte Technikjournalismus, Public Relations sowie Kultur und Technik. Seine Master Arbeit schrieb er über das Bildungspotenzial offener Werkstätten."
+  bio: "Maximilian Voigt unterstützt das Projekt [edulabs](https://okfn.de/projekte/edulabs/). Zudem engagiert er sich in offenen Werkstätten, beschäftigt sich mit physical computing und setzt sich für freie Bildung ein. Vor der Open Knowledge Foundation Deutschland mitbegründete Maximilian den FabLab Cottbus e.V., studierte Technikjournalismus, Public Relations sowie Kultur und Technik. Seine Masterarbeit schrieb er über das Bildungspotenzial offener Werkstätten."
   bio_en: "Maximilian Voigt supports the project edulabs as an assistent. Further more he campaigns for fabrication laboratories, is engaged in physical computing and supports free education. Before his work at the OKF he co founded the FabLab Cottbus e.V., studied technical journalism, public relations and culture and technology. His master thesis was about the educational potential of open workshops."
   mail: maximilian.voigt@okfn.de
   twitter: maximusvoigttus
@@ -416,7 +416,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Leonard Wolf unterstützte 2015 bereits als Praktikant und Fotograf das Team von „Jugend hackt“ bei der Planung und Durchführung des Berliner Events. Im Juli 2016 schloss er seine Schullaufbahn ab und entschied sich dann für einen Bundesfreiwilligendienst. Diesen macht er nun seit September 2016  bei der Open Knowledge Foundation Deutschland. Dabei ist er vorrangig für „Jugend hackt“ und „Frag den Staat“ tätig und unterstützt die jeweiligen Teams. Leonard ist darüber hinaus auch ehrenamtlich bei mehreren Organisationen und Vereinen, die sich mit Jugendbeteiligung und Demokratiepädagogik auseinandersetzen, engagiert. Sein persönliches Interesse liegt in der Fotografie, weshalb er auch regelmäßig als Veranstaltungsfotograf unterwegs ist."
+  bio: "Leonard Wolf unterstützte 2015 bereits als Praktikant und Fotograf das Team von „Jugend hackt“ bei der Planung und Durchführung des Berliner Events. Im Juli 2016 schloss er seine Schullaufbahn ab und entschied sich dann für einen Bundesfreiwilligendienst. Diesen macht er nun seit September 2016  bei der Open Knowledge Foundation Deutschland. Dabei ist er vorrangig für „Jugend hackt“ und „FragDenStaat“ tätig und unterstützt die jeweiligen Teams. Leonard ist darüber hinaus auch ehrenamtlich bei mehreren Organisationen und Vereinen, die sich mit Jugendbeteiligung und Demokratiepädagogik auseinandersetzen, engagiert. Sein persönliches Interesse liegt in der Fotografie, weshalb er auch regelmäßig als Veranstaltungsfotograf unterwegs ist."
   bio_en: "Leonard Wolf unterstützte 2015 bereits als Praktikant und Fotograf das Team von „Jugend hackt“ bei der Planung und Durchführung des Berliner Events. Im Juli 2016 schloss er seine Schullaufbahn ab und entschied sich dann für einen Bundesfreiwilligendienst. Diesen macht er nun seit September 2016  bei der Open Knowledge Foundation Deutschland. Dabei ist er vorrangig für „Jugend hackt“ und „Frag den Staat“ tätig und unterstützt die jeweiligen Teams. Leonard ist darüber hinaus auch ehrenamtlich bei mehreren Organisationen und Vereinen, die sich mit Jugendbeteiligung und Demokratiepädagogik auseinandersetzen, engagiert. Sein persönliches Interesse liegt in der Fotografie, weshalb er auch regelmäßig als Veranstaltungsfotograf unterwegs ist."
   mail: "leonard.wolf@okfn.de"
   twitter: woleonard
