--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -5,7 +5,7 @@
   advisory: 0
   position:
   bio: "Kristina ist seit August 2014 Geschäftsführerin bei der Open Knowledge Foundation Deutschland. Davor war sie bei UNHCR in Myanmar für den Bereich Donor Relations zuständig. Kristina hat als Senior Program Manager der Carnegie Endowment for International Peace das Brüsseler Büro stellvertretend geleitet und als Programm- und Konferenz-Manager den Bereich Internationale Politik der Körber Stiftung begleitet. Weitere berufliche Stationen waren der Danish Refugee Council in Myanmar und das Wall Street Journal Europe in Berlin."
-  bio_en: "Kristina is Chief Operating Officer of OKF DE since August 2014. Previously, she worked as Peace Building Fund Coordinator with UNHCR in Myanmar. Kristina was the deputy lead of the Brussels office of Carnegie Endowment for International Peace, and part of the International Relations team of Körber Foundation. She has furthermore worked with the Danish Refugee Council in Myanmar and the Wall Street Journal Europe in Berlin."
+  bio_en: "Kristina is Chief Executive Officer of OKF DE since August 2014. Previously, she worked as Peace Building Fund Coordinator with UNHCR in Myanmar. Kristina was the deputy lead of the Brussels office of Carnegie Endowment for International Peace, and part of the International Relations team of Körber Foundation. She has furthermore worked with the Danish Refugee Council in Myanmar and the Wall Street Journal Europe in Berlin."
   mail: kristina.klein@okfn.de
   twitter:
   website:
