--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -409,6 +409,20 @@
   twitter: m_neujeffski
   website:
   github: mojeffski
+  
+  - name: Rebecca Varghese Buchholz
+  title:
+  img: rebeccabuchholz
+  staff: 1
+  board: 0
+  advisory: 0
+  position:
+  bio: "Seit April 2017 leitet Rebecca 2030Watch, das OKF Monitoring-Projekt zur deutschen Nachhaltigkeitsstrategie. Davor war Rebecca Referentin für Welthandel und Investitionsabkommen bei Traidcraft in London und wissenschaftliche Mitarbeiterin bei dem United Nations Research Institute (UNRISD) for Social Development in Genf. Rebecca studierte Volkswirtschaft mit Schwerpunkt Entwicklungspolitik an der School of African and Oriental Studies (University of London) und der University of Cambridge und hat ein Graduate Diploma in Law (London College of Law)." 
+  bio_en: "Since April 2017, Rebecca manages 2030Watch, a civil society monitoring project of SDGs’ implementation in Germany. Prior to joining OKF, Rebecca worked as a Senior Policy Adviser for international trade and investment treaties at Traidcraft in London and as a Research Analyst for the United Nations Research Institute (UNRISD) for Social Development in Geneva. Rebecca graduated in Economics and Development Studies from the School of African and Oriental Studies (BA hons) and the University of Cambridge (MPhil) and holds a Graduate Diploma in Law (London College of Law)."
+  mail: "rebecca.buchholz@okfn.de"
+  twitter:
+  website:
+  github:
 
 - name: Leonard Wolf
   title:
