--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -423,6 +423,20 @@
   twitter:
   website:
   github:
+  
+- name: John David Langlo
+  title:
+  img: johnlanglo
+  staff: 1
+  board: 0
+  advisory: 0
+  position:
+  bio: "John arbeitet als studentische Hilfskraft für 2030Watch und ist dort vornehmlich für Kommunikation zuständig. In Wien hat John internationale Entwicklungspolitik studiert und befindet sich derzeit im Master „Contemporary European Studies: politics, policy and society“ an der University of Bath und der HU Berlin. Praktika absolvierte er unter anderem bei der deutschen Vertretung im UN-Menschenrechtsrat in Genf und beim Deutschlandfunk Kultur in Berlin." 
+  bio_en: "John is a working student at 2030Watch and mainly responsible for communication and research assistance. In Vienna John majored in development studies and currently studies for his postgraduate degree in „Contemporary European Studies: politics, policy and society“ at the Humboldt University Berlin. As an intern John worked for the German permanent mission to the UN Human Rights Council in Geneva and Deutschlandfunk Kultur broadcasting in Berlin."
+  mail: "john.langlo@okfn.de"
+  twitter:
+  website:
+  github:
 
 - name: Leonard Wolf
   title:
