--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -45,7 +45,7 @@ thema:
   WeitereThemen: More Topics
 blog:
   FeedTitle: Blog of Open Knowledge Foundation Germany
-  FeedAbo: subscribe with your feedreeder
+  FeedAbo: Subscribe with your feedreader
   Mehr: Read full post...
   Von: by
   AmDatum: "on"
@@ -80,7 +80,7 @@ start:
     Learn more about our <a href="/en/verein/">organisation</a>, our <a href="/en/mission/">goals</a>, and our <a href="/en/projekte/">projects</a>.
   Spenden: Donations
   SpendenText: >
-    The Open Knowledge Foundation is an independent, unbiased, interdisciplinary, and nonprofit organization. Almost all of our projects are run by volunteers. 
+    The Open Knowledge Foundation is an independent, unbiased, interdisciplinary, and nonprofit organization. Almost all of our projects are run by volunteers.
     Therefore, we welcome any donation that allows us to provide support and a good infrastructure to the people working for the Open Knowledge Foundation Germany. We also accept donations for specific projects.
   SpendenJa: Sounds good. I want to support OKF DE!
   SpendenNein: Hold on. Tell me more first.
