--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -52,7 +52,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Jasmin hat Soziologie und Germanistik in Kiel und Potsdam studiert und arbeitet seit Oktober 2016 in den Projekten Datenschule und Demokratielabore im Bereich Kommunikation. Der verantwortungsvolle Umgang mit Daten ist ein zentrales Anliegen für sie."
+  bio: "Jasmin hat Soziologie und Germanistik in Kiel und Potsdam studiert und arbeitet seit Oktober 2016 bei der OKF im Bereich Kommunikation, aktuell in den Projekten Datenschule und Demokratielabore. Zuvor hat sie einige Praktika in Zeitungs- und Fernsehredaktionen absolviert und war ehrenamtlich für Umwelt-NGOs in der Presse- und Öffentlichkeitsarbeit tätig. Der verantwortungsvolle Umgang mit Daten ist ein zentrales Anliegen für sie."
   bio_en: "Jasmin studied sociology at Potsdam University and supports the projects \"Datenschule\" and \"Demokratielabore\" since October 2016. The handling of data in a responsible way is a main concern for her."
   mail: jasmin.helm@okfn.de
   twitter:
