--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -680,8 +680,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Saadya arbeitet seit Januar 2017 bei der OKF und ist aktuell als Projektmanagerin bei den Demokratielaboren. "
-  bio_en: ""
+  bio: "Saadya arbeitet seit Januar 2017 bei der OKF und ist aktuell als Projektmanagerin bei den Demokratielaboren."
+  bio_en: "Saadya has been working for the Open Knowledge Foundation since January 2017 and is a projekt manager at the Dmokratielabore."
   mail: saadya.windauer@okfn.de
   twitter:
   website:
