--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ exclude:
   - "scripts/"
   - "_site/"
   - "vendor/"
-gems:
+plugins:
   - jekyll-redirect-from
   - jekyll-sitemap
   - octopress-autoprefixer
