Make Stefan a board alumni

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -330,6 +330,7 @@
   img: stefanwehrmeyer
   staff: 1
   board: 0
+  board_alumni: 1
   advisory: 0
   bio: "Stefan Wehrmeyer engagiert sich seit 2009 für Open Data. Im Jahr 2011 startete er das Informationsfreiheitsportal [FragDenStaat.de](https://fragdenstaat.de/)."
   bio_en: "Since 2009 Stefan Wehrmeyer promotes Open Data and he started the Freedom of Information (FOI) portal FragDenStaat.de in 2011."
