--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -693,7 +693,7 @@
   board: 0
   advisory: 0
   position:
-  bio: "Lea unterstützt die OKF seit September 2017 als Bundesfreiwillige und arbeitet aktuell bei Jugend hackt und Frag den Staat mit."
+  bio: "Lea unterstützt die OKF seit September 2017 im Rahmen ihres Freiwilligendienstes beim FJ Beteiligung und arbeitet aktuell bei Jugend hackt und Frag den Staat mit."
   bio_en: "Lea has been working for the Open Knowledge Foundation since September 2017 and joined the projects Jugend hackt and Frag den Staat."
   mail: lea.schubert@okfn.de
   twitter:
