add folder 10 for images

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ __posts/
 .bundle/
 .gem/
 blog/_posts/2017/2017-04-05-open data-aus-sicht-von -einem-14-jährigen.md
+
+blog/_posts/2017/2017-04-05-open data-aus-sicht-von -einem-14-jährigen.md
