--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -106,7 +106,7 @@ impressum:
   Fax: Fax
   Tech: Technik
   TechBROWSERSTACK: >
-    Für das Testen von Browserkompatibilität wird diese Seite von <a href="www.browserstack.com">BrowserStack</a> unterstützt.
+    Für das Testen von Browserkompatibilität wird diese Seite von <a href="https://www.browserstack.com/">BrowserStack</a> unterstützt.
   TechJEKYLL: >
     HTML erzeugt mit <a href="https://jekyllrb.com/">Jekyll</a> und DataLove.
 jobs:
