add adriana to team

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -83,6 +83,18 @@
   twitter: malienamadrina
   website:
 
+- name: Adriana Groh
+  img: adrianagroh
+  staff: 1
+  board: 0
+  advisory: 0
+  position:
+  bio: "Adriana ist Teil des Prototype Fund Teams und kümmert sich um das Program Management. Zuvor hat sie Politikwissenschaft und European Public Policy and Administration in Frankfurt am Main und Maastricht studiert. Sie interessiert sich sehr für demokratische Innovationen und die Frage, wie Partizipation und gesellschaftlicher Austausch besser funktionieren könnten. 2016 hat Adriana das Projekt wepublic gestartet, das digitale Kommunikation zwischen Bürgern und Politikern verbessern soll."
+  bio_en: "Adriana ist Teil des Prototype Fund Teams und kümmert sich um das Program Management. Zuvor hat sie Politikwissenschaft und European Public Policy and Administration in Frankfurt am Main und Maastricht studiert. Sie interessiert sich sehr für demokratische Innovationen und die Frage, wie Partizipation und gesellschaftlicher Austausch besser funktionieren könnten. 2016 hat Adriana das Projekt wepublic gestartet, das digitale Kommunikation zwischen Bürgern und Politikern verbessern soll."
+  mail: adriana.groh@okfn.de
+  twitter:
+  website:
+
 - name: Paula Glaser
   img: paulaglaser
   staff: 1
