--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -89,8 +89,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Adriana ist Teil des Prototype Fund Teams und kümmert sich um das Program Management. Zuvor hat sie Politikwissenschaft und European Public Policy and Administration in Frankfurt am Main und Maastricht studiert. Sie interessiert sich sehr für demokratische Innovationen und die Frage, wie Partizipation und gesellschaftlicher Austausch besser funktionieren könnten. 2016 hat Adriana das Projekt wepublic gestartet, das digitale Kommunikation zwischen Bürgern und Politikern verbessern soll."
-  bio_en: "Adriana ist Teil des Prototype Fund Teams und kümmert sich um das Program Management. Zuvor hat sie Politikwissenschaft und European Public Policy and Administration in Frankfurt am Main und Maastricht studiert. Sie interessiert sich sehr für demokratische Innovationen und die Frage, wie Partizipation und gesellschaftlicher Austausch besser funktionieren könnten. 2016 hat Adriana das Projekt wepublic gestartet, das digitale Kommunikation zwischen Bürgern und Politikern verbessern soll."
+  bio: "Adriana ist Teil des Prototype Fund-Teams und kümmert sich um das Program Management. Zuvor hat sie Politikwissenschaft und European Public Policy and Administration in Frankfurt am Main und Maastricht studiert. Sie interessiert sich sehr für demokratische Innovationen und die Frage, wie Partizipation und gesellschaftlicher Austausch besser funktionieren könnten. 2016 hat Adriana das Projekt wepublic gestartet, das digitale Kommunikation zwischen Bürgern und Politikern verbessern soll."
+  bio_en: "Adriana is part of the Prototype Fund teams und responsible for program management. She studied Political Science and European Public Policy in Frankfurt and Maastricht."
   mail: adriana.groh@okfn.de
   twitter:
   website:
@@ -529,7 +529,7 @@
 - name: Xiaowei Chen
   title:
   img: xiaoweichen
-  staff: 1
+  staff: 0
   board: 0
   advisory: 0
   position:
